--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,14 @@
 {
   "name": "j7-dev/wp-plugin",
-  "description": "",
+  "description": "This is a boilerplate for creating a WordPress plugin with vite",
   "type": "wordpress-plugin",
   "license": "GPL-2.0-only",
   "authors": [
     {
-      "name": "J7",
-      "email": "j7.dev.gg@gmail.com"
+      "name": "JerryLiu",
+      "email": "j7.dev.gg@gmail.com",
+      "homepage": "https://github.com/j7-dev",
+      "role": "Developer"
     }
   ],
   "repositories": [
@@ -21,10 +23,12 @@
     }
   },
   "require": {
-		"yahnis-elsts/plugin-update-checker": "^5.3"
+    "yahnis-elsts/plugin-update-checker": "^5.3",
+    "j7-dev/tgm-plugin-activation-forked": "^1.0",
+    "micropackage/singleton": "^1.1"
   },
   "require-dev": {
-		"squizlabs/php_codesniffer": "@stable",
+    "squizlabs/php_codesniffer": "@stable",
     "wp-coding-standards/wpcs": "@stable",
     "dealerdirect/phpcodesniffer-composer-installer": "@stable"
   },
