--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,18 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+pnpm-lock.yaml
 lerna-debug.log*
 
-node_modules
-vendor
-dist
+**/node_modules/**
+**/dist/**
+**/dist*/**
+**/vendor/**
 dist-ssr
 *.local
+release/*
+!release/*.cjs
+.env
 
 # Editor directories and files
 .vscode/*
@@ -23,3 +28,5 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+/vendor/
