--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "format": "prettier-eslint --write \"js/src/**/*.tsx\"",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
-    "push": "npm version patch && git push"
+    "release": "env-cmd -f ./.env release-it patch --ci --verbose --config ./release/.release-it.cjs",
+    "release:patch": "env-cmd -f ./.env release-it patch --ci --verbose --config ./release/.release-it.cjs",
+    "release:minor": "env-cmd -f ./.env release-it minor --ci --verbose --config ./release/.release-it.cjs",
+    "release:major": "env-cmd -f ./.env release-it major --ci --verbose --config ./release/.release-it.cjs",
+    "zip": "env-cmd -f ./.env node ./release/zip.cjs",
+    "create:release": "env-cmd -f ./.env node ./release/create-release.cjs",
+    "sync:version": "wp-update-project-version -s package.json -p plugin.php"
   },
   "pre-commit": [
     "lint:fix"
@@ -47,6 +53,7 @@
     "prettier-eslint": "^15.0.1",
     "prettier-eslint-cli": "^7.1.0",
     "prettier-plugin-multiline-arrays": "^1.1.3",
+    "release-it": "^17.2.0",
     "sass": "^1.58.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^4.9.4",
