--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wp-plugin",
   "private": true,
-  "version": "0.0.4",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "bootstrap": "npm install && composer install --no-interaction",
@@ -29,6 +29,7 @@
     "jquery": "^3.7.1"
   },
   "devDependencies": {
+    "@soderlind/wp-project-version-sync": "^2.0.2",
     "@types/jquery": "^3.5.29",
     "@types/node": "^18.14.0",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
@@ -61,6 +62,7 @@
     "vite": "^5.0.12",
     "vite-plugin-live-reload": "^3.0.2",
     "vite-plugin-optimizer": "^1.4.3",
-    "vite-tsconfig-paths": "^4.0.5"
+    "vite-tsconfig-paths": "^4.0.5",
+    "yarn-upgrade-all": "^0.7.2"
   }
 }
