--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@vitejs/plugin-react": "^3.0.0",
     "@wordpress/eslint-plugin": "^14.0.0",
     "autoprefixer": "^10.4.13",
+    "env-cmd": "^10.1.0",
     "eslint": "^8.34.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.6.0",
