feat:單獨設定蘭新信用卡分期金額

--- a/.prettierrc
+++ b/.prettierrc
@@ -2,18 +2,16 @@
   "arrowParens": "always",
   "bracketSpacing": true,
   "parenSpacing": true,
-  "printWidth": 80,
+  "printWidth": 1000,
   "semi": false,
   "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "all",
   "useTabs": false,
   "endOfLine": "auto",
-  "multilineArraysWrapThreshold": 4,
-  "plugins": [
-    "./node_modules/eslint-plugin-prettier",
-    "./node_modules/prettier-plugin-multiline-arrays"
-  ],
+  "multilineArraysWrapThreshold": 2,
+  "prettier-multiline-arrays-set-threshold": 4,
+  "plugins": ["./node_modules/eslint-plugin-prettier", "./node_modules/prettier-plugin-multiline-arrays"],
   "overrides": [
     {
       "files": ["*.json"],
@@ -22,10 +20,7 @@
       }
     },
     {
-      "files": [
-        "*.yaml",
-        "*.yml"
-      ],
+      "files": ["*.yaml", "*.yml"],
       "options": {
         "singleQuote": false,
         "tabWidth": 2,
