--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   ],
   "dependencies": {
     "@rollup/plugin-alias": "^5.0.0",
+    "@rollup/plugin-replace": "^5.0.5",
     "jquery": "^3.7.1"
   },
   "devDependencies": {
