--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jquery": "^3.7.1"
   },
   "devDependencies": {
+    "@rollup/plugin-inject": "^5.0.5",
     "@soderlind/wp-project-version-sync": "^2.0.2",
     "@types/jquery": "^3.5.29",
     "@types/node": "^18.14.0",
@@ -60,6 +61,7 @@
     "release-it": "^17.2.0",
     "sass": "^1.58.3",
     "tailwindcss": "^3.4.1",
+    "terser": "^5.31.0",
     "typescript": "^4.9.4",
     "typescript-eslint": "^0.0.1-alpha.0",
     "vite": "^5.0.12",
